--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+*.pdb
+*.dll
 # User-specific files
 *.rsuser
 *.suo
